--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "axios": "^1.8.3",
@@ -19,6 +20,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.40.0",
+    "firebase": "^11.4.0",
     "lucide-react": "^0.479.0",
     "next": "15.2.2",
     "react": "^19.0.0",
